Thu Nov 13 23:22:21 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/os_include/sys/os_select.h:
          Added missing #include of select.h when ACE_HAS_SELECT_H is
          defined.

        * tests/DLL_Test.cpp:
        * tests/DLL_Test_Impl.cpp:
          #ifdef away the dynamic_cast test if ACE_LACKS_RTTI is defined.

Thu Nov 13 16:22:19 2003  Steve Huston  <shuston@riverace.com>

	* configure.ac: Make the check for sys/select.h set
	  ACE_LACKS_SYS_SELECT_H is _not_ found. Added a check of select.h
	  that sets ACE_HAS_SELECT_H. Changed further code tests that used
	  ACE_HAS_SELECT_H to include <sys/select.h> to use
	  ACE_LACKS_SYS_SELECT_H instead.

	* m4/config_h.m4: Added AH_TEMPLATE for ACE_LACKS_SYS_SELECT_H.

Thu Nov 13 19:56:53 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ASNMP/tests/Octet_Test.cpp:
          Added #include OS_NS_string.h.

        Thanks to Olli Savia <ops@iki.fi> for the following fixes need to
        complile ACE on LynxOS.

        * ace/Base_Thread_Adapter.cpp:
          Added #include OS_NS_Thread.h if ACE_HAS_TSS_EMULATION is defined.

        * ace/OS_NS_stdlib.cpp:
          Added #include OS_NS_stdio.h and OS_NS_sys_stat.h if
          ACE_LAKCS_MKTEMP is defined.

        * ace/OS_NS_strings.cpp:
          Added #include OS_NS_ctype.h if ACE_LACKS_STRCASECMP is defined.

        * ace/config-lynxos.h:
          Added ACE_LACKS_WCHAR_H, ACE_LACKS_REGEX_H, and
          ACE_LACKS_TCP_NODELAY.

Thu Nov 13 12:54:35 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          When defining OBJS, always use $(notdir $(FILES)).

Thu Nov 13 18:39:15 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp:
        * examples/C++NPv2/TPC_Logging_Server.cpp:
          Added #include os_netdb.h to get MAXHOSTNAMELEN.
