@@ -125,7 +125,7 @@ int basic_test (ACE_DLL &dll)
 int dynamic_cast_test (ACE_DLL &dll)
 {
 
-#if defined (ACE_LACKS_RTTI)
+#if !defined (ACE_LACKS_RTTI)
   Child child;
   child.test();
 
@@ -149,7 +149,9 @@ int dynamic_cast_test (ACE_DLL &dll)
 
   if (pfnAcquire( &child ) == -1)
     ACE_ERROR_RETURN ((LM_ERROR, ACE_TEXT ("dyanmic_cast failed.\n")), -1);
-#endif /* ACE_LACKS_RTTI */
+#else
+  ACE_UNUSED_ARG (dll);
+#endif /* !ACE_LACKS_RTTI */
 
   return 0;
 }
